turned the div into a card and center aligned // fixed bugs

--- a/public/assets/stylesheets/casino.css
+++ b/public/assets/stylesheets/casino.css
@@ -231,3 +231,11 @@ ul li:nth-child(4):hover span {
     width:100px;
     height:150px;
 }
+
+#endRoundDiv {
+    text-align: center;
+    color:black;
+    width: 50%;
+    margin: 25px, auto;
+    background-color: white;
+}
